implemeted PUT AND GET for animal avatar
